# sample-genai-reflection-for-bedrock

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  EXPERIMENTS.md  NOTICE  README.md  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
docs/: conf.py  index.rst
examples/benchmarks/: generate_plots.py  plot_arithmetic.py  plot_benchmarks.py
examples/benchmarks/arithmetic/: cleaned_result.json  notes.txt  result.json
examples/benchmarks/math500/: cleaned_result.json  notes.txt  result.json
examples/benchmarks/text2sql/: cleaned_result.json  notes.txt  result.json
examples/demo/: .env.example  demo.py
examples/optimisation/: grid_search.csv  plot_grid_search.py  reasoning_grid_search.csv  test_grid_search.py  test_grid_search_arithmetic.py  test_grid_search_math500.py
examples/profiling/: bhive_profile.py  bhive_time_trial.py  plot_caching_results.py  plot_time_trial.py  sonnet37_caching.txt  test_prompt.txt  time_trial.py  timing_results.csv
src/bhive/: __init__.py  augment.py  chat.py  client.py  config.py  cost.py  evaluators.py  inference.py  prompt.py  struct_output.py  utils.py
src/bhive/evaluators/: __init__.py  budget.py  math.py  string.py
tests/: test_augment.py  test_client.py  test_config.py  test_evaluators.py  test_inference.py
