[project]
name = "bedrock_hive"
version = "0.5.2"
description = "Library for enabling test-time-compute augmentations in Bedrock"
authors = [
    {name = "Jack Butler", email = "jackbtlr@amazon.com"},
]
license = { text = "Amazon Software License" }
dependencies = [
    "boto3>=1.34.51,<1.36.0",
    "botocore>=1.34.1,<1.36.0",
    "loguru>=0.7.2",
    "pydantic>=2.9.2",
]
requires-python = ">=3.10"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["bhive"]

[tool.uv]
dev-dependencies = [
    "matplotlib>=3.9.2",
    "pre-commit>=4.0.1",
    "pytest-mock>=3.14.0",
    "pytest>=8.3.3",
    "python-dotenv>=1.0.1",
    "seaborn>=0.13.2",
    "snakeviz>=2.2.0",
    "streamlit>=1.39.0",
    "watchdog>=5.0.3",
]

[tool.ruff]
line-length = 100
target-version = "py39"
extend-include = ["*.ipynb"]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    "__pypackages__",
    "_build",
    "build",
    "dist",
    "venv",
    ".venv",
]

[tool.pytest.ini_options]
pythonpath = ["./src/"]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "should_*"
