[project]
name = "bee_hive"
version = "0.6.4"
description = "Library for enabling inference-time-compute augmentations in Bedrock"
authors = [
    {name = "Jack Butler", email = "jackbtlr@amazon.com"},
]
license = { text = "Amazon Software License" }
dependencies = [
    "boto3>=1.37.10,<1.38.0",
    "botocore>=1.37.10,<1.38.0",
    "loguru>=0.7.2",
    "pydantic>=2.9.2",
]
requires-python = ">=3.10"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["bhive*"]

[tool.uv]
dev-dependencies = [
    "matplotlib>=3.9.2",
    "pre-commit>=4.0.1",
    "pytest-mock>=3.14.0",
    "pytest>=8.3.3",
    "python-dotenv>=1.0.1",
    "seaborn>=0.13.2",
    "snakeviz>=2.2.0",
    "sympy>=1.13.3",
    "pylatexenc>=2.10",
]

[tool.ruff]
line-length = 100
target-version = "py39"
extend-include = ["*.ipynb"]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    "__pypackages__",
    "_build",
    "build",
    "dist",
    "venv",
    ".venv",
]

[tool.pytest.ini_options]
pythonpath = ["./src/"]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "should_*"
